[gd_scene load_steps=7 format=3 uid="uid://bjjvxs5ab2ic2"]

[ext_resource type="Script" path="res://Main.gd" id="1_onl7w"]
[ext_resource type="Script" path="res://Dijkstra.gd" id="2_q0vrf"]

[sub_resource type="LabelSettings" id="LabelSettings_c1tco"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_4eklh"]
font_size = 20
font_color = Color(0.690196, 0.690196, 0.690196, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3f4hf"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_v5xlb"]
font_size = 20

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_onl7w")
STATUS_NOTHING_IMPORTED = "Er zijn geen keuzes geïmporteerd.
Gebruik de knoppen aan de rechterkant om keuzes te importeren."
STATUS_IMPORTING = "Keuzes worden geïmporteerd."
STATUS_IMPORTED = "Keuzes van %d leerlingen geladen voor %d periodes.

De capaciteiten kunnen aan de rechterkant worden aangegeven.
Daaronder kunnen de indelingen worden gegenereerd met de knop 'Genereer Indelingen'."
STATUS_GENERATING = "De indeling wordt gegenereerd. Zodra deze klaar is, wordt een Excel-bestand geopend met de indeling."
STATUS_GENERATED = "De indeling is gegenereerd. Deze is opgeslagen in het Excel-bestand dat net is geopend.

Als deze indeling niet goed is, kan er een nieuwe gegenereerd worden.
Hiervoor moet eerst het Excel-bestand gesloten worden."

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="StatusLabel" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Keuzes van %d leerlingen geladen voor %d periodes."
label_settings = SubResource("LabelSettings_c1tco")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ProgressBarPrimary" type="ProgressBar" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24

[node name="ProgressLabel" type="Label" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Sample Text..."
label_settings = SubResource("LabelSettings_4eklh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBarSecondary" type="ProgressBar" parent="HSplitContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 24

[node name="CancelButton" type="Button" parent="HSplitContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Annuleren"

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/PanelContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="SideVBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
layout_mode = 2
text = "Importeer Keuzes"
label_settings = SubResource("LabelSettings_3f4hf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClipboardButton" type="Button" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Van Klembord..."

[node name="FileButton" type="Button" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Van Bestand..."

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
layout_mode = 2

[node name="CapaciteitLabel" type="Label" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Capaciteit modules"
label_settings = SubResource("LabelSettings_v5xlb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
visible = false
layout_mode = 2

[node name="GenereerButton" type="Button" parent="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Genereer Indelingen"

[node name="Dijkstra" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_q0vrf")
max_points = 10000000

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 4
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.xlsx", "*.csv")

[node name="AlertDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Let op!"
initial_position = 4
size = Vector2i(359, 135)
unresizable = true
dialog_text = "Kan indeling.csv niet openen. Waarschijnlijk is dit bestand al geopend in Excel. Sluit het bestand en probeer het opnieuw."
dialog_autowrap = true

[connection signal="indelingen_gegenereerd" from="." to="." method="_on_indelingen_gegenereerd"]
[connection signal="pressed" from="HSplitContainer/PanelContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer/ClipboardButton" to="." method="_on_clipboard_button_pressed"]
[connection signal="pressed" from="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer/FileButton" to="FileDialog" method="show"]
[connection signal="pressed" from="HSplitContainer/PanelContainer2/ScrollContainer/MarginContainer/SideVBoxContainer/GenereerButton" to="." method="_on_genereer_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_load_from_file"]
